--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Schwarz Hochzeitsfotografen</title>
-		<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+		<script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<h1> Willkommen </h1>
