--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Schwarz Hochzeitsfotografen</title>
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	</head>
 	<body>
