--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="info"> </div>
 		<script>
 			$(function() {
-				var baseUrl = "images/ev1";
+				var baseUrl = "portfolio/ev1";
 				var pictureIndex = 0;
 				var pictures = [];
 
