--- a/index.html
+++ b/index.html
@@ -10,43 +10,37 @@
 		<div id="info"> </div>
 		<script>
 			$(function() {
-				var baseUrl = "portfolio/ev1";
+				var baseUrl = "https://madf0x.github.io/schwarz.cam/portfolio/";
 				var pictureIndex = 0;
 				var pictures = [];
+				jQuery.ajaxSetup({async:false});
 
-				function getFiles() {
-					$.ajax(baseUrl).success(function(data) {
-						pictures = [];
-						$(data).find("a[href]").each(function() {
-							var href = $(this).attr('href');
-							if (href.indexOf('.jpg') > 0 || href.indexOf('.png') > 0 || href.indexOf('.jpeg') > 0) {
-								pictures.push(href);
-							}
-						});
-						console.log(pictures.length + " pictures loaded!");
-						changePicture(0);
-					});
+				function getImages()
+				{
+				  $.get(baseUrl + 'index', function(data) {
+				    pictures = data.split(/\r?\n/).filter(e => e.trim() != '');
+				  }, 'text');
 				}
 
 				function changePicture(indexOffset) {
-					pictureIndex += indexOffset;
-					if (pictureIndex >= pictures.length) {
-						pictureIndex = 0;
-					} else if (pictureIndex < 0) {
-						pictureIndex = pictures.length - 1;
-					}
-					$('#viewer').attr('src', baseUrl + pictures[pictureIndex]);
-					$('#info').text((pictureIndex + 1) + "/" + pictures.length);
+				  pictureIndex += indexOffset;
+				  if (pictureIndex >= pictures.length) {
+				    pictureIndex = 0;
+				  } else if (pictureIndex < 0) {
+				    pictureIndex = pictures.length - 1;
+				  }
+				  $('#viewer').attr('src', baseUrl + pictures[pictureIndex]);
+				  $('#info').text((pictureIndex + 1) + "/" + pictures.length);
 				}
-
-				getFiles();
+				getImages();
+        			changePicture(0);
 				$(document).keydown(function(e){
-					var left = -1, right = 1;
-				    if (e.keyCode == 37) {
-				       changePicture(left); return false;
-				    } else if (e.keyCode == 39) {
-					changePicture(right); return false;
-				    }
+				  var left = -1, right = 1;
+				  if (e.keyCode == 37) {
+				    changePicture(left); return false;
+				  } else if (e.keyCode == 39) {
+				    changePicture(right); return false;
+				  }
 				});
 			});
 		</script>
